unpackaged/main/default/objects/Supplier_Contacts__c/Supplier_Contacts__c.object-meta.xml
<CustomObject>
    <label>Supplier Contacts</label>
    <nameField>
        <label>Supplier Contacts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplier Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>