unpackaged/main/default/objects/Supplier_Contacts__c/fields/Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Manager</label>
    <type>Checkbox</type>
</CustomField>