unpackaged/main/default/objects/Supplier_Contacts__c/fields/Content_Manager__c.field-meta.xml
<CustomField>
    <fullName>Content_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Content Manager</label>
    <type>Checkbox</type>
</CustomField>