unpackaged/main/default/objects/Supplier_Contacts__c/fields/Escalation_Point__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Point__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalation Point</label>
    <type>Checkbox</type>
</CustomField>