unpackaged/main/default/objects/Supplier_Contacts__c/fields/Is_Deleted__c.field-meta.xml
<CustomField>
    <fullName>Is_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This contact has been deleted from Situ Core</inlineHelpText>
    <label>Has been Deleted</label>
    <type>Checkbox</type>
</CustomField>