unpackaged/main/default/objects/Supplier_Contacts__c/fields/Lead_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Name</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Supplier Contacts</relationshipLabel>
    <relationshipName>Supplier_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>