unpackaged/main/default/objects/Supplier_Contacts__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <label>Mobile / Alternative</label>
    <type>Phone</type>
</CustomField>