unpackaged/main/default/objects/Supplier_Contacts__c/fields/Reservations_Contact__c.field-meta.xml
<CustomField>
    <fullName>Reservations_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reservations Contact</label>
    <type>Checkbox</type>
</CustomField>