unpackaged/main/default/objects/Supplier_Contacts__c/fields/Supplier_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Account_Name__c</fullName>
    <label>Supplier Account Name</label>
    <referenceTo>Supplier_Accounts__c</referenceTo>
    <relationshipLabel>Supplier Contacts</relationshipLabel>
    <relationshipName>Supplier_Contacts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>