unpackaged/main/default/objects/Supplier_Contacts__c/fields/Supplier_Buildings__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Buildings__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Buildings</label>
    <referenceTo>Supplier_Buildings__c</referenceTo>
    <relationshipLabel>Supplier Contacts</relationshipLabel>
    <relationshipName>Supplier_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>