unpackaged/main/default/objects/Supplier_Contacts__c/fields/Supplier_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Contact_ID__c</fullName>
    <externalId>true</externalId>
    <label>Supplier Contact ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>