unpackaged/main/default/objects/Supplier_Contacts__c/fields/Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Postal_Code__c</fullName>
    <label>Zip / Postal Code</label>
    <type>TextArea</type>
</CustomField>