unpackaged/main/default/objects/Supplier_Contacts__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Job_Title__c</columns>
    <columns>Email__c</columns>
    <columns>Phone_Number__c</columns>
    <columns>Mobile__c</columns>
    <columns>Account_Manager__c</columns>
    <columns>Reservations_Contact__c</columns>
    <columns>Is_Sales__c</columns>
    <columns>Is_Finance_Department__c</columns>
    <columns>Do_Not_Email__c</columns>
    <columns>Do_Not_Call__c</columns>
    <columns>Is_Deleted__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>